--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-partials": "^0.3.0",
     "global": "^4.4.0",
     "nodemon": "^3.0.3",
     "victormono": "^1.5.6"
